improved code style!
